--- a/app.json
+++ b/app.json
@@ -3,11 +3,11 @@
   "description": "A Telegram Bot To Play Songs In Telegram Group Video Chats. Powered by PyTGCalls.",
   "keywords": ["Music", " Videochat", "Voicechat", "Telegram"],
   "logo": "https://telegra.ph/file/22ae93512721d5186932e.jpg",
-  "repository": "https://github.com/AnonymousBoy1025/BabyGirlMusic",
+  "repository": "https://github.com/AnonymousR1025/BabyGirlMusic",
   "stack": "container",
   "env": {
     "SESSION_NAME": {
-      "description": "Pyrogram Session String Get From https://t.me/AnonymousStringBot",
+      "description": "Pyrogram Session String Get From https://t.me/StringFatherBot",
       "required": true
     },
     "BOT_TOKEN": {
@@ -17,7 +17,7 @@
     "BOT_USERNAME": {
       "description": "Username of the bot without @, Get this value from @BotFather",
       "required": true,
-      "value": "Devil_X_Robot"
+      "value": ""
     },
     "API_ID": {
       "description": "Get this value from my.telegram.org/apps",
@@ -29,6 +29,11 @@
       "required": true,
       "value": "ab88e6ee1be33f53db445baf874e1c74"
     },
+    "SUPPORT": {
+      "description": "Username of the group where bot users will go and disturb you",
+      "required": true,
+      "value": "DevilsHeavenMF"
+    }
     "OWNER_ID": {
       "description": "Telegram I'd of the owner of bot",
       "required": true,
